[package]
name = "mc_worlds"
version = "0.1.0"
authors = ["Master0r0 <m.sarahgreywolf@outlook.com>"]
edition = "2018"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
tokio = {version="0.2.21", features=["rt-core", "io-std", "fs", "stream"]}
flate2 = {version="1.0.18", features=["tokio"]}
uuid = { version = "0.8.1", features=["v4"]}
log = "0.4.11"
hematite-nbt = "0.5.0"
toml = "0.5.7"
serde = {version="1.0.117", features=["derive"]}