[package]
name = "mineonline_api"
version = "0.1.0"
authors = ["Master0r0 <m.sarahgreywolf@outlook.com>"]
edition = "2018"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["full"] }
reqwest = {version = "0.10", features = ["json"] }
md5 = "0.7.0"
rand = "0.7.3"
json = "0.12.4"