[package]
name = "mineonline_api"
version = "0.1.0"
authors = ["Master0r0 <m.sarahgreywolf@outlook.com>"]
edition = "2018"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.6", features = ["json"] }
serde = {version="1.0.116", features=["derive"]}
serde_derive = "1.0.116"
serde_json = "1.0.58"
json = "0.12.4"
log = "0.4.11"
base64 = "0.13.0"
image = "0.23.12"