[package]
name = "server"
version = "0.1.0"
authors = ["Master0r0 <m.sarahgreywolf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.7.1"
toml = "0.5.6"
serde = "1.0.114"
serde_derive = "1.0.114"

mineonline_api = {path = "../mineonline_api"}
mc_packets = {path = "../mc_packets"}