[package]
name = "server"
version = "0.1.0"
authors = ["Master0r0 <m.sarahgreywolf@outlook.com>"]
edition = "2018"

[features]
#default = ["mineonline_api", "mojang_api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = {version="0.7.1", features=["async"]}
toml = "0.5.6"
serde = "1.0.114"
serde_derive = "1.0.114"
fern = {version="0.6.0", features = ["colored"] }
chrono = "0.4.12"
log = "0.4.8"
rand = "0.7.3"
specs = "0.16.1"
tokio = {version="0.2.21", features=["full"]}
backtrace = "0.3.50"
flate2 = {version="1.0.17", features=["tokio"]}

mineonline_api = {path = "../mineonline_api"}
mojang_api = {path = "../mojang_api"}
mc_packets = {path = "../mc_packets"}
mc_worlds = {path = "../mc_worlds"}
grey_mc_api = {path = "../grey_mc_api"}